--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,38 @@
         background: #1A4668;
     }
 }
+.stars {
+  display: inline-block;
+  font-size: 35px;
+  line-height: 25px;
+  position: relative;
+  text-align: left;
+  vertical-align: top;
+  margin-top: 4px;
+  color: goldenrod;
+}
+.stars:after {
+  content: "☆☆☆☆☆";
+}
+.stars--large {
+  font-size: 45px;
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .stars--large {
+    width: 230px;
+  }
+}
+.stars span {
+  display: block;
+  left: 0;
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.stars span:after {
+  content: "★★★★★";
+}
 
 
 
