--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,557 @@
 /*private*/
 /*search box css start here*/
+/*login form*/
+.loginForm .modal-dialog {
+  max-width: 500px; }
+  .loginForm .modal-dialog .modal-content {
+    border-radius: 1.25rem;
+    border: none;
+    background: url("../images/bg-login.png") no-repeat bottom;
+    padding-bottom: 1.875rem;
+    background-size: cover; }
+    @media (max-width: 991.98px) {
+      .loginForm .modal-dialog .modal-content {
+        padding: 1.25rem; } }
+    @media (max-width: 575.98px) {
+      .loginForm .modal-dialog .modal-content {
+        padding: 0.625rem; } }
+
+.loginForm .form-group {
+  background: #fff;
+  border-radius: 4px; }
+  .loginForm .form-group .form-control {
+    border: none;
+    font-weight: 600;
+    letter-spacing: 0.1px;
+    opacity: 0.5;
+    height: 2.3125rem; }
+  .loginForm .form-group--other {
+    text-align: center;
+    margin-top: 1.875rem; }
+    .loginForm .form-group--other > a {
+      color: #3c5899;
+      font-size: 0.9375rem;
+      text-transform: uppercase;
+      font-weight: bold; }
+
+.loginForm .btn-flag {
+  background: #d5eefe;
+  border-radius: 4px;
+  border: none;
+  font-weight: bold; }
+  .loginForm .btn-flag.dropdown-toggle:after {
+    color: #999999;
+    border-right: 5px solid transparent;
+    border-left: 5px solid transparent;
+    position: relative;
+    top: 3px; }
+  .loginForm .btn-flag-1 .ic-flag,
+  .loginForm .btn-flag-1 .f-text {
+    display: none; }
+  .loginForm .btn-flag-1 .ic-flag img {
+    max-width: 24px;
+    max-height: 17px; }
+  .loginForm .btn-flag-2 span {
+    display: inline-block;
+    vertical-align: middle; }
+    .loginForm .btn-flag-2 span.ic-flag {
+      padding-right: 0.3125rem; }
+      .loginForm .btn-flag-2 span.ic-flag img {
+        max-width: 24px;
+        max-height: 17px; }
+    .loginForm .btn-flag-2 span.f-text {
+      display: none; }
+
+.loginForm a {
+  color: #e33d30; }
+
+.loginForm .btn-sign {
+  margin-top: 2.1875rem;
+  margin-bottom: 2.1875rem; }
+
+.loginForm .btn-sb {
+  width: 100%; }
+
+.loginForm .row {
+  margin-left: -10px;
+  margin-right: -10px; }
+  .loginForm .row [class*="col-"] {
+    padding-left: 10px;
+    padding-right: 10px; }
+
+.loginForm .form-style--2 .form-group {
+  position: relative; }
+
+.loginForm .form-style--2 .heading--6 { }
+
+.loginForm.digitForm .modal-content {
+  background: #fff; }
+  .loginForm.digitForm .modal-content .form-style--2 {
+    max-width: 300px;
+    margin: 0 auto; }
+  .loginForm.digitForm .modal-content .row {
+    margin-left: -0.1875rem;
+    margin-right: -0.1875rem; }
+    .loginForm.digitForm .modal-content .row [class*="col-"] {
+      padding-left: 0.1875rem;
+      padding-right: 0.1875rem; }
+  .loginForm.digitForm .modal-content .form-control {
+    background: #d6efff;
+    border-radius: 4px; }
+
+.loginForm.digitForm .btn-group-change {
+  border-top: 1px solid #cccccc;
+  font-size: 0.9375rem;
+  margin-left: -4.6875rem;
+  margin-right: -4.6875rem;
+  padding-top: 1.25rem;
+  margin-top: 4.375rem;
+  margin-bottom: -1.25rem;
+  text-align: center; }
+  .loginForm.digitForm .btn-group-change .row > div a {
+    color: #2d72b3;
+    cursor: pointer; }
+  .loginForm.digitForm .btn-group-change .row > div:last-child a {
+    color: #e33d30;
+    cursor: pointer; }
+.btn-sb {
+  background: #e33d30;
+  color: #fff;
+  font-size: 0.9375rem;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  padding: 0.5625rem 0.3125rem;
+  border-radius: 30px;
+  transition: all 0.2s ease-in-out; }
+  @media screen and (prefers-reduced-motion: reduce) {
+    .btn-sb {
+      transition: none; } }
+  .btn-sb.btn-fb {
+    background: #3c5899; }
+  .btn-sb.btn-google {
+    background: #de4b39; }
+  .btn-sb i {
+    margin-right: 0.375rem; }
+  .btn-sb:hover {
+    background: #6f0c04; }
+  .btn-sb.btn-sb--1 {
+    width: 2.875rem;
+    height: 2.875rem;
+    border-radius: 50%;
+    position: absolute;
+    text-align: center;
+    right: -60px;
+    top: -0.125rem;
+    box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.38); }
+    .btn-sb.btn-sb--1 i {
+      margin-right: 0; }
+.btn-sign {
+  background: #e33d30;
+  color: #fff;
+  width: 100%;
+  font-size: 0.9375rem;
+  font-weight: bold;
+  border: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 0.75rem 0.3125rem;
+  border-radius: 4px;
+  letter-spacing: 0.1px;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.38);
+  transition: all 0.2s ease-in-out; }
+  @media screen and (prefers-reduced-motion: reduce) {
+    .btn-sign {
+      transition: none; } }
+  .btn-sign:hover {
+    background: #6f0c04; }
+.heading {
+  text-align: center; }
+  .heading h1 {
+    font-size: 2.25rem;
+    line-height: 1.3333333333; }
+    .heading h1 span {
+      letter-spacing: 0.1em;
+      color: #333333;
+      font-weight: 800;
+      text-transform: uppercase; }
+      .heading h1 span.red {
+        color: #e33d30; }
+    .heading h1 > small {
+      display: block;
+      font-size: 0.5em;
+      font-weight: 500;
+      margin-top: 0.8333333333em; }
+  .heading--2 {
+    font-size: 1.5rem;
+    margin-bottom: 1.25em;
+    font-weight: 700;
+    letter-spacing: 0.07em;
+    line-height: 1.25;
+    position: relative;
+    text-transform: uppercase; }
+    .heading--2 p {
+      text-transform: none;
+      font-size: 1.125rem;
+      line-height: 1.6666666667;
+      letter-spacing: 0.03em;
+      color: #333333;
+      font-weight: 400; }
+    .heading--2 .heading__icon {
+      position: absolute;
+      top: 0.1666666667em;
+      left: 0;
+      width: 2.5em; }
+      .heading--2 .heading__icon img {
+        width: 100%;
+        max-width: 2.5em;
+        max-height: 2.2916666667em; }
+        .heading--2 .heading__icon img[src*="list-house"] {
+          max-height: 1.7916666667em; }
+        .heading--2 .heading__icon img[src*="finish-complete"] {
+          margin-top: -0.7083333333em;
+          max-height: 2.5833333333em; }
+      .heading--2 .heading__icon + .heading__content {
+        margin-left: 3.4583333333em; }
+    .heading--2 .heading__content {
+      display: inline-block;
+      min-width: 10em;
+      position: relative;
+      padding-bottom: 0.6666666667em;
+      border-bottom: 1px solid #ebebeb; }
+      .heading--2 .heading__content:after {
+        content: "";
+        display: block;
+        position: absolute;
+        height: 1px;
+        width: 3.75em;
+        background: #e33d30;
+        left: 0;
+        bottom: 0; }
+  .heading--5 {
+    color: #333333;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 2.5rem; }
+  .heading--6 {
+    color: #282828;
+    font-size: 1.125rem;
+    font-weight: bold;
+    text-align: center;
+    overflow: hidden;
+    margin-bottom: 1.875rem; }
+    .heading--6 span {
+      display: inline-block;
+      position: relative;
+      padding: 0 13px; }
+      .heading--6 span:after, .heading--6 span:before {
+        background: #000;
+        content: "";
+        height: 1px;
+        position: absolute;
+        top: 50%; }
+      .heading--6 span:after {
+        left: 100%;
+        width: 200px; }
+      .heading--6 span:before {
+        right: 100%;
+        width: 200px; }
+  .heading h3 {
+    font-size: 1.5rem;
+    line-height: 1.25;
+    font-weight: 700;
+    color: #333333;
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 0;
+    padding-bottom: 25px;
+    position: relative; }
+    .heading h3::before {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+      height: 1px;
+      width: 240px;
+      background-color: #ebebeb; }
+    .heading h3::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+      height: 1px;
+      width: 90px;
+      background-color: #e33d30; }
+.custom-control-input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0; }
+  .custom-control-input:checked ~ .custom-control-label::before {
+    color: #fff;
+    background-color: #007bff; }
+  .custom-control-input:focus ~ .custom-control-label::before {
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+  .custom-control-input:active ~ .custom-control-label::before {
+    color: #fff;
+    background-color: #b3d7ff; }
+  .custom-control-input:disabled ~ .custom-control-label {
+    color: #6c757d; }
+    .custom-control-input:disabled ~ .custom-control-label::before {
+      background-color: #e9ecef; }
+
+.custom-control-label {
+  margin-bottom: 0; }
+  .custom-control-label::before {
+    position: absolute;
+    top: 0.25rem;
+    left: 0;
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    pointer-events: none;
+    content: "";
+    user-select: none;
+    background-color: #dee2e6; }
+  .custom-control-label::after {
+    position: absolute;
+    top: 0.25rem;
+    left: 0;
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    content: "";
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%; }
+
+.custom-checkbox .custom-control-label::before {
+  border-radius: 0.25rem; }
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #007bff; }
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
+
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
+  background-color: #007bff; }
+
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
+
+.custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
+  background-color: rgba(0, 123, 255, 0.5); }
+
+.custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
+  background-color: rgba(0, 123, 255, 0.5); }
+
+.custom-radio .custom-control-label::before {
+  border-radius: 50%; }
+
+.custom-radio .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #007bff; }
+
+.custom-radio .custom-control-input:checked ~ .custom-control-label::after {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E"); }
+
+.custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
+  background-color: rgba(0, 123, 255, 0.5); }
+.custom-select {
+  display: inline-block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+  line-height: 1.5;
+  color: #495057;
+  vertical-align: middle;
+  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
+  background-size: 8px 10px;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
+  .custom-select:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(128, 189, 255, 0.5); }
+    .custom-select:focus::-ms-value {
+      color: #495057;
+      background-color: #fff; }
+  .custom-select[multiple], .custom-select[size]:not([size="1"]) {
+    height: auto;
+    padding-right: 0.75rem;
+    background-image: none; }
+  .custom-select:disabled {
+    color: #6c757d;
+    background-color: #e9ecef; }
+  .custom-select::-ms-expand {
+    opacity: 0; }
+
+.custom-select-sm {
+  height: calc(1.8125rem + 2px);
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+  font-size: 75%; }
+
+.custom-select-lg {
+  height: calc(2.875rem + 2px);
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+  font-size: 125%; }
+
+.custom-file {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  margin-bottom: 0; }
+
+.custom-file-input {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  margin: 0;
+  opacity: 0; }
+  .custom-file-input:focus ~ .custom-file-label {
+    border-color: #80bdff;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    .custom-file-input:focus ~ .custom-file-label::after {
+      border-color: #80bdff; }
+  .custom-file-input:lang(en) ~ .custom-file-label::after {
+    content: "Browse"; }
+
+.custom-file-label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem; }
+  .custom-file-label::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    display: block;
+    height: calc(calc(2.25rem + 2px) - 1px * 2);
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    color: #495057;
+    content: "Browse";
+    background-color: #e9ecef;
+    border-left: 1px solid #ced4da;
+    border-radius: 0 0.25rem 0.25rem 0; }
+
+.custom-range {
+  width: 100%;
+  padding-left: 0;
+  background-color: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
+  .custom-range:focus {
+    outline: none; }
+  .custom-range::-moz-focus-outer {
+    border: 0; }
+  .custom-range::-webkit-slider-thumb {
+    width: 1rem;
+    height: 1rem;
+    margin-top: -0.25rem;
+    background-color: #007bff;
+    border: 0;
+    border-radius: 1rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; }
+    .custom-range::-webkit-slider-thumb:focus {
+      outline: none;
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    .custom-range::-webkit-slider-thumb:active {
+      background-color: #b3d7ff; }
+  .custom-range::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 0.5rem;
+    color: transparent;
+    cursor: pointer;
+    background-color: #dee2e6;
+    border-color: transparent;
+    border-radius: 1rem; }
+  .custom-range::-moz-range-thumb {
+    width: 1rem;
+    height: 1rem;
+    background-color: #007bff;
+    border: 0;
+    border-radius: 1rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; }
+    .custom-range::-moz-range-thumb:focus {
+      outline: none;
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    .custom-range::-moz-range-thumb:active {
+      background-color: #b3d7ff; }
+  .custom-range::-moz-range-track {
+    width: 100%;
+    height: 0.5rem;
+    color: transparent;
+    cursor: pointer;
+    background-color: #dee2e6;
+    border-color: transparent;
+    border-radius: 1rem; }
+  .custom-range::-ms-thumb {
+    width: 1rem;
+    height: 1rem;
+    background-color: #007bff;
+    border: 0;
+    border-radius: 1rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; }
+    .custom-range::-ms-thumb:focus {
+      outline: none;
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    .custom-range::-ms-thumb:active {
+      background-color: #b3d7ff; }
+  .custom-range::-ms-track {
+    width: 100%;
+    height: 0.5rem;
+    color: transparent;
+    cursor: pointer;
+    background-color: transparent;
+    border-color: transparent;
+    border-width: 0.5rem; }
+  .custom-range::-ms-fill-lower {
+    background-color: #dee2e6;
+    border-radius: 1rem; }
+  .custom-range::-ms-fill-upper {
+    margin-right: 15px;
+    background-color: #dee2e6;
+    border-radius: 1rem; }
+
+/*end login form*/
+.google-ads{
+  border: 1px red solid!important;
+}
+.footer-top-grid1 ul li{
+  display: inline-block;
+  border: 1px gray solid;
+  padding: 1px;
+  border-radius: 3px;
+}
 .list-cate{
   margin: 1em;
   background-color: #f8f8f8;
